--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   terraform:
-    name: Terraform Init, Plan and Apply
+    name: Terraform Init, Import (if needed), Plan and Apply
     runs-on: ubuntu-latest
 
     steps:
@@ -21,6 +21,18 @@ jobs:
 
       - name: Terraform Init
         run: terraform init
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
+      - name: Conditional Terraform Import for Instance Profile
+        run: |
+          if ! terraform state list | grep -q aws_iam_instance_profile.grafana_instance_profile; then
+            echo "Importing existing instance profile into state..."
+            terraform import aws_iam_instance_profile.grafana_instance_profile grafana-instance-profile || true
+          else
+            echo "Instance profile already in Terraform state. Skipping import."
+          fi
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
